--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,2 +1,11 @@
 <h1>課題管理アプリ</h1>
-<p>Find me in app/views/top/index.html.erb</p>
+<p>学生のための課題管理アプリです</p>
+
+<div class="count">
+<h1>現在の課題数</h1>
+<h2><%= @tasks.count %></h2>
+</div>
+
+<hr/>
+<%= link_to '課題登録', new_task_path %>｜
+<%= link_to 'ユーザー登録', new_task_path %>
